Fix sidebar menu filtering for public and role-based access